--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="nl.svdoetelaar.capstoneproject">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CapstoneProject">
+        android:theme="@style/Theme.CapstoneProject"
+        tools:ignore="AllowBackup">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.home.RequestPermissionsActivity"
+            android:label="@string/title_activity_request_permissions" />
+        <activity
+            android:name=".ui.home.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.CapstoneProject.NoActionBar">
             <intent-filter>
@@ -19,6 +28,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.home.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CapstoneProject.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <receiver android:name=".GeofenceBroadcastReceiver" />
     </application>
 
 </manifest>
