--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,30 +17,17 @@
         android:theme="@style/Theme.CapstoneProject"
         tools:ignore="AllowBackup">
         <activity
-            android:name=".ui.overview.OverviewActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/overview_window_title"
             android:theme="@style/Theme.CapstoneProject.NoActionBar">
 
         </activity>
-        <activity
-            android:name=".ui.landing.RequestPermissionsActivity"
-            android:label="@string/title_activity_request_permissions" />
         <activity
             android:name=".ui.landing.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.CapstoneProject.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.landing.LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CapstoneProject.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
