--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
+        android:name=".util.MyApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name=".util.MyApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.CapstoneProject"
         tools:ignore="AllowBackup">
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".GeofenceBroadcastReceiver" />
+        <receiver android:name=".util.GeofenceBroadcastReceiver" />
     </application>
 
 </manifest>
