--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,21 +35,27 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".ui.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:label="@string/overview_window_title"
-            android:theme="@style/Theme.CapstoneProject.NoActionBar"></activity>
-        <activity
-            android:name=".ui.landing.SplashActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CapstoneProject.NoActionBar">
+            android:name=".ui.maps.MapsActivity"
+            android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:label="@string/overview_window_title"
+            android:theme="@style/Theme.CapstoneProject.NoActionBar" />
+        <activity
+            android:name=".ui.landing.SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CapstoneProject.NoActionBar">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <receiver android:name=".util.GeofenceBroadcastReceiver" />
